# learn-rust

./: README.md  rust-book-guide.md
custom_type_for_validation/: Cargo.toml
custom_type_for_validation/src/: main.rs
ecdysis_example/: Cargo.toml
ecdysis_example/src/: main.rs
enums_match/: Cargo.toml
enums_match/src/: main.rs
error_propagation/: Cargo.toml
error_propagation/src/: main.rs
errors/: Cargo.toml
errors/src/: main.rs
functions/: Cargo.toml
functions/src/: main.rs
functions_ownership/: Cargo.toml
functions_ownership/src/: main.rs
functions_ownership2/: Cargo.toml
functions_ownership2/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hashmaps/: Cargo.toml
hashmaps/src/: main.rs
hello_cargo/: Cargo.toml
hello_world/: main.rs
rectangles/: Cargo.toml
rectangles/src/: main.rs
rectangles2/: Cargo.toml
rectangles2/src/: main.rs
strings/: Cargo.toml
strings/src/: main.rs
variables/: Cargo.toml
variables/src/: main.rs
vectors/: Cargo.toml
vectors/src/: main.rs
