[package]
name = "ecdysis_example"
version = "0.1.0"
edition = "2024"

[dependencies]
ecdysis = { version = "1", features = ["systemd_notify", "systemd_sockets"] }
tokio   = { version = "1", features = ["full"] }
futures = "0.3"
nix     = { version = "0.31", features = ["process"] }      # ← add process
waitgroup = "0.1.2"
env_logger = "0.11"
log = "0.4"

[features]                       # optional, only if you want to toggle
systemd_notify  = []             # the cfgs in main.rs need these
systemd_sockets = []